--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ grpcio==1.31.0
 gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
-Jinja2==2.11.2
+jinja2>=2.11.3
 jmespath==0.10.0
 joblib==0.16.0
 MarkupSafe==1.1.1
@@ -33,12 +33,12 @@ python-dateutil==2.8.1
 pytz==2020.1
 regex==2020.7.14
 requests==2.24.0
-rsa==4.6
+rsa>=4.7
 s3transfer==0.3.3
 scipy==1.5.2
 six==1.15.0
 smart-open==2.1.1
 tqdm==4.48.2
-urllib3==1.25.10
+urllib3>=1.26.5
 visitor==0.1.3
 Werkzeug==1.0.1
